@@ -1,0 +1,150 @@
+title Ubuntuland
+strict-trade
+domestic-trade
+num-players 6
+sevens-rule 0
+victory-points 40
+num-roads 24
+num-bridges 12
+num-ships 48
+num-settlements 6
+num-cities 12
+num-city-walls 12
+resource-count 80
+develop-road 30
+develop-monopoly 5
+develop-plenty 30
+develop-chapel 10
+develop-university 10
+develop-governor 10
+develop-library 10
+develop-market 10
+develop-soldier 30
+use-pirate
+island-discovery-bonus 3
+chits 2,5,4,6,3,9,8,11,11,10,6,3,8,4,8,10,11,12,8,6,10,5,4,9,5,9,12,3,2,6,6,8,6,8,6,2,5,4,6,6,8,6,6,8,3,9,8,11,8,6,11,10,6,3,8,4,8,10,11,12,10,5,4,9,5,9,12,3,2,6,2,5,4,6,3,9,8,11,11,10,6,3,8,4,8,10,11,12,10,5,4,9,5,9,12,3,2,6,2,5,4,6,3,9,8,11,11,10,6,3,8,4,8,2,10,11,12,10,5,4,9,5,9,12,6,8,10,6,8,6,8,6
+map
+s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s
+s,s,s,s,sb5,h0,f1,m2,p3,s,t4,h5,f6,m7,sg4,s,s,s,s,-
+s,s,s,s,t8,t9,p10,m11,f12,s,s,m13,p14,t15,h16,p17,s,s,s,s
+s,g18,g19,s,h20,f21,m22,h23,f24,s,h25,f26,m27,h28,f29,s,g30,g31,s,-
+s,g32,g33,g34,s,p35,t36,s,so2,s,s,sw1,s,p37,t38,s,g39,g40,g41,s
+s,g42,g43,s,t44,p45,sw2,s,s,s,s,s,s?1,t46,p47,s,g48,g49,s,-
+s,s,s,s,h50,m51,s,s,s,s,s,s,s,s,h52,m53,s,s,s,s
+s,p54,m55,f56,f57,s,s,s,s,s,s,s,s,s,f58,f59,m60,t61,s,-
+s,s?0,p62,t63,h64,sg3,s,s,s,s,s,s,s,s,sb0,m65,h66,p67,sl3,s
+s,m68,h69,t70,s,s,s,s,s,s,s,s,s,s,s,p71,t72,h73,s,-
+s,s,f74,f75,p76,sl3,s,s,s,s,s,s,s,s,so0,t77,h78,f79,s,s
+s,s,h80,m81,m82,s,s,s,s,s,s,s,s,s,h83,t84,m85,s,s,-
+s,s,s,t86,s,s,s,s,s,s,s,s,s,s,s,s,p87,s,s,s
+s,s,s,s,s,f88,sw4,s,s,s,s,s,sb5,f89,s,s,s,s,s,-
+s,s,s,s,p90,m91,h92,s,sg4,s,s,so5,s,m93,p94,t95,s,s,s,s
+s,s,s,s,m96,f97,t98,p99,m100,f101,h102,t103,p104,m105,h106,s,s,s,s,-
+s,s,s,s,s,f107,h108,m109,p110,f111,t112,m113,h114,f115,f116,s,s,s,s,s
+s,s,s,s,s,h117,p118,p119,s,s,s,p120,t121,m122,s,s,s,s,s,-
+s,s,s,s,s,s,sl1,t123,s,g124,g125,s,p126,s?2,s,s,s,s,s,s
+s,s,s,s,s,s,s,s,g127,g128,g129,s,s,s,s,s,s,s,s,-
+s,s,s,s,s,s,s,s,s,g130,g131,s,s,s,s,s,s,s,s,s
+s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,s,-
+.
+nosetup 0 3 0
+nosetup 0 3 4
+nosetup 0 3 5
+nosetup 0 4 5
+nosetup 0 5 0
+nosetup 0 5 5
+nosetup 1 2 5
+nosetup 1 3 0
+nosetup 1 3 4
+nosetup 1 3 5
+nosetup 1 4 5
+nosetup 1 5 0
+nosetup 1 5 4
+nosetup 1 5 5
+nosetup 2 2 5
+nosetup 2 3 0
+nosetup 2 3 4
+nosetup 2 3 5
+nosetup 2 4 5
+nosetup 2 5 0
+nosetup 2 5 4
+nosetup 2 5 5
+nosetup 3 3 4
+nosetup 3 4 5
+nosetup 7 19 0
+nosetup 7 19 5
+nosetup 8 17 4
+nosetup 8 17 5
+nosetup 8 18 5
+nosetup 8 19 0
+nosetup 8 19 4
+nosetup 8 19 5
+nosetup 8 20 5
+nosetup 8 21 0
+nosetup 9 17 4
+nosetup 9 17 5
+nosetup 9 18 5
+nosetup 9 19 0
+nosetup 9 19 4
+nosetup 9 19 5
+nosetup 9 20 5
+nosetup 9 21 0
+nosetup 10 17 4
+nosetup 10 18 5
+nosetup 10 19 0
+nosetup 10 19 4
+nosetup 10 19 5
+nosetup 10 20 5
+nosetup 15 3 0
+nosetup 15 3 4
+nosetup 15 3 5
+nosetup 15 4 5
+nosetup 15 5 0
+nosetup 15 5 5
+nosetup 16 2 5
+nosetup 16 3 0
+nosetup 16 3 4
+nosetup 16 3 5
+nosetup 16 4 5
+nosetup 16 5 0
+nosetup 16 5 4
+nosetup 16 5 5
+nosetup 17 2 5
+nosetup 17 3 0
+nosetup 17 3 4
+nosetup 17 3 5
+nosetup 17 4 5
+nosetup 17 5 0
+nosetup 17 5 4
+nosetup 17 5 5
+nosetup 18 3 4
+nosetup 18 4 5
+
+# ubuntuland
+# created September 24, 2010
+# by Matt Perry <matt@1792coins.com>
+
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+
+
+# This map was made to show support for ubuntu linux and the basic map layout
+# was built to resemble the ubuntu linux 'circle of friends' logo. It is a map
+# that supports 6 players with uneven island/port distributions and therefore
+# requires strategy to play and succeeed as it is possible that the game may
+# not have a winner due to the reduced number of available settlement/city
+# pieces. I hope that you enjoy this map, even if it is a frustrating one and
+# that you try ubuntu linux if you do not use it already.
+
+# Please provide some feedback
